--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,8 +3,8 @@
     <a href="#" class="header__logo logo"></a>
     <nav class="header__menu menu">
       <ul class="menu__list">
-        <li class="menu__item"><a href="#" class="menu__link">Main</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">Service</a></li>
+        <li class="menu__item"><a href="#" class="menu__link">Development</a></li>
+        <li class="menu__item"><a href="#" class="menu__link">Design</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Portfolio</a></li>
         <li class="menu__item"><a href="#" class="menu__link">About us</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Contact Us</a></li>
