--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,5 +1,103 @@
 <footer class="footer">
-  <div class="footer__container">
-    
+  <div class="container footer__container">
+    <div class="footer__tablet">
+      <div class="company-address">
+        <a href="#" class="footer__link link">
+          <img class="footer__icon" height="70px" src="../images/logoblack.png" alt="dots icon">
+        </a>
+        <address class="address">
+          <ul class="list address-list">
+            <li class="address-list__item">
+              <h2 class="address__title">Phone number:</h2>
+              <a href="tel:+15197743398" class="address__link ">+1 (519) 774-3398</a>
+            </li>
+            <li class="address-list__item">
+              <h2 class="address__title">E-mail:</h2>
+              <a href="firststepweb.ca@gmail.com" class="address__link ">firststepweb.ca@gmail.com</a>
+            </li>
+            <li class="address-list__item">
+              <a href="" class="address__link ">WhatsApp</a>
+            </li>
+
+          </ul>
+        </address>
+      </div>
+      <div class="services">
+        <h2 class="services__title">SERVICES</h2>
+        <ul class="services__list list">
+          <li class="services__item">
+            <a class="services__link link" href="">
+              Landing page
+            </a>
+          </li>
+          <li class="services__item">
+            <a class="services__link link" href="">
+              Corporate WebSites
+            </a>
+          </li>
+          <li class="services__item">
+            <a class="services__link link" href="">
+              Business WebSite
+            </a>
+          </li>
+          <li class="services__item">
+            <a class="services__link link" href="">
+              Business Card Website
+            </a>
+          </li>
+          <li class="services__item">
+            <a class="services__link link" href="">
+              Website redesign
+            </a>
+          </li>
+          <li class="services__item">
+            <a class="services__link link" href="">
+              Technical support
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="services">
+      <h2 class="services__title">INFORMATION</h2>
+      <ul class="services__list list">
+        <li class="services__item">
+          <a class="services__link link" href="">
+            About us
+          </a>
+        </li>
+        <li class="services__item">
+          <a class="services__link link" href="">
+            Services
+          </a>
+        </li>
+        <li class="services__item">
+          <a class="services__link link" href="">
+            Portfolio
+          </a>
+        </li>
+
+      </ul>
+    </div>
+
+    <div class="services">
+      <h2 class="services__title">SOCIAL NETWORKS</h2>
+      <ul class="services__list list">
+        <li class="services__item">
+          <a class="services__link link" href="">
+            Facebook
+          </a>
+        </li>
+        <li class="services__item">
+          <a class="services__link link" href="">
+            Instagram
+          </a>
+        </li>
+
+      </ul>
+    </div>
   </div>
+
+
 </footer>
