--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,10 +1,10 @@
 <header class="header">
-  <div class="header__container">
-    <a href="#" class="header__logo logo"></a>
+  <div class="header__container container">
+    <a href="#" class="logo"><img class=" menu__icon" height="70px" src="../images/logo.svg" alt="dots icon"></a>
     <nav class="header__menu menu">
       <ul class="menu__list">
         <li class="menu__item"><a href="#" class="menu__link">Development</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">Design</a></li>
+        <li class="menu__item"><a href="#" class="menu__link">Services</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Portfolio</a></li>
         <li class="menu__item"><a href="#" class="menu__link">About us</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Contact Us</a></li>
