--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @@include('html/head.html', {
-    'title': 'Главная'
-  })
-  <body>
-    <div class="wrapper">
-      @@include('html/header.html', {})
-      <main class="page">
-        <div data-observ></div>
-        
-      </main>
-      @@include('html/footer.html', {})
-    </div>
-    @@include('html/script.html', {})
-  </body>
-</html> 
+@@include('html/head.html', {
+'title': 'Главная'
+})
+
+<body>
+  <div class="wrapper">
+    @@include('html/header.html', {})
+    <main class="page">
+      <div data-observ></div>
+
+      <section class="main_block">
+        @@include('html/pages/mainSection.html', {})
+      </section>
+
+      <section class="service_block">
+        @@include('html/pages/servicesSection.html', {})
+      </section>
+
+      <section class="aboutUs_block">
+        @@include('html/pages/aboutUs.html', {})
+      </section>
+
+      <section class="whyChooseUs_block">
+        @@include('html/pages/whyChooseUs.html', {})
+      </section>
+
+    </main>
+    @@include('html/footer.html', {})
+  </div>
+  @@include('html/script.html', {})
+</body>
+
+</html>
