--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header__container container">
-    <a href="#" class="logo"><img class=" menu__icon" height="70px" src="../images/logo.svg" alt="dots icon"></a>
+    <a href="#" class="logo"><img class=" menu__icon" height="70px" src="../images/logow.png" alt="dots icon"></a>
     <nav class="header__menu menu">
       <ul class="menu__list">
         <li class="menu__item"><a href="#" class="menu__link">Development</a></li>
