--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
     <main class="page">
       <div data-observ></div>
 
+      <section>
+        @@include('html/sidebar.html', {})
+      </section>
+
       <section class="main_block">
         @@include('html/pages/mainSection.html', {})
       </section>
