--- a/src/html/pages/servicesSection.html
+++ b/src/html/pages/servicesSection.html
@@ -1,88 +1,91 @@
 <ul class="list services-card">
     <li class="services-card__item">
-
-        <h2 class="services-card__title">&mdash; Landing page</h2>
-        <p class="services-card__desc">We create profitable landing pages with an attractive design and maximum
-            conversion.
-        </p>
-
-        <div class="services-card__block">
-            <a href="#" class="services-card__link">
-                To learn more
-            </a>
-            <!-- <div class="arrow-hover">
-                <div class="arrow "></div>
-            </div> -->
-            <p class="services-card__price">from 1000$</p>
+        <a href="#myModal1" class="services-card__link">
+            <h2 class="services-card__title">Landing page</h2>
+            <div class="services-card__line"></div>
+            <p class="services-card__desc">We create profitable landing pages with an attractive design and maximum
+                conversion.</p>
+            <div class="services-card__block">
+                <p class="services-card__price">from 1000$</p> <span>to learn more</span>
+            </div>
+        </a>
+        <!-- modal -->
+        <div id="myModal1" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+            </div>
         </div>
+    </li>
 
+    <li class="services-card__item">
+        <a href="#myModal2" class="services-card__link">
+            <h2 class="services-card__title">Corporate WebSites</h2>
+            <div class="services-card__line"></div>
+            <p class="services-card__desc">We design corporate projects of different complexity and scale.</p>
+            <div class="services-card__block">
+                <p class="services-card__price">from 1000$</p>
+            </div>
+        </a>
+        <!-- modal -->
+        <div id="myModal2" class="modal">
+            <div class="modal-content">
+                <span class="close">&times; </span>
+            </div>
+
+        </div>
     </li>
     <li class="services-card__item">
-
-        <h2 class="services-card__title">&mdash; Corporate WebSites</h2>
-        <p class="services-card__desc">We design corporate projects of different complexity and scale.</p>
-
-        <div class="services-card__block">
-            <a href="#" class="services-card__link">
-                To learn more
-            </a>
-
-            <p class="services-card__price">from 1000$</p>
-        </div>
+        <a href="#" class="services-card__link">
+            <h2 class="services-card__title">Business WebSite</h2>
+            <div class="services-card__line"></div>
+            <p class="services-card__desc">We help businesses to build proper positioning for expansion of partner’s and
+                client’s networks.</p>
+            <div class="services-card__block">
+                <p class="services-card__price">from 1000$</p>
+            </div>
+        </a>
     </li>
     <li class="services-card__item">
-
-        <h2 class="services-card__title">&mdash; Business WebSite</h2>
-        <p class="services-card__desc">We help businesses to build proper positioning for expansion of partner’s and
-            client’s networks.</p>
-        <div class="services-card__block">
-            <a href="#" class="services-card__link">
-                To learn more
-            </a>
-
-            <p class="services-card__price">from 1000$</p>
-        </div>
-
+        <a href="#" class="services-card__link">
+            <h2 class="services-card__title">Business Card Website</h2>
+            <div class="services-card__line"></div>
+            <p class="services-card__desc">We pay particular attention to create an emotional and bright brand
+                impression.</p>
+            <div class="services-card__block">
+                <p class="services-card__price">from 1000$</p>
+            </div>
+        </a>
     </li>
     <li class="services-card__item">
-
-        <h2 class="services-card__title">&mdash; Business Card Website</h2>
-        <p class="services-card__desc">We pay particular attention to create an emotional and bright brand impression.
-        </p>
-        <div class="services-card__block">
-            <a href="#" class="services-card__link">
-                To learn more
-            </a>
-
-            <p class="services-card__price">from 1000$</p>
-        </div>
-
+        <a href="#" class="services-card__link">
+            <h2 class="services-card__title">Website redesign</h2>
+            <div class="services-card__line"></div>
+            <p class="services-card__desc">We help our clients stay ahead of the competition. We update the design, add
+                new
+                "chips".
+            </p>
+            <div class="services-card__block">
+                <p class="services-card__price">from 1000$</p>
+            </div>
+        </a>
     </li>
     <li class="services-card__item">
-
-        <h2 class="services-card__title">&mdash; Website redesign</h2>
-        <p class="services-card__desc">We help our clients stay ahead of the competition. We update the design, add new
-            "chips".</p>
-        <div class="services-card__block">
-            <a href="#" class="services-card__link">
-                To learn more
-            </a>
-
-            <p class="services-card__price">from 1000$</p>
-        </div>
-
+        <a href="#" class="services-card__link">
+            <h2 class="services-card__title">Technical support</h2>
+            <div class="services-card__line"></div>
+            <p class="services-card__desc">We support and develop created and existing projects
+            </p>
+            <div class="services-card__block">
+                <p class="services-card__price">from 1000$</p>
+            </div>
+        </a>
     </li>
-    <li class="services-card__item">
 
-        <h2 class="services-card__title">&mdash; Technical support</h2>
-        <p class="services-card__desc">We support and develop created and existing projects</p>
-        <div class="services-card__block">
-            <a href="#" class="services-card__link">
-                To learn more
-            </a>
-
-            <p class="services-card__price">from 1000$</p>
-        </div>
-
-    </li>
 </ul>
+
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <!-- Вміст модального вікна тут -->
+        <span class="close">&times;</span>
+    </div>
+</div>
