--- a/src/html/sidebar.html
+++ b/src/html/sidebar.html
@@ -1,13 +1,25 @@
 <div class="sidenav">
     <ul class="sidenav__list">
-        <li><a href="#about" class="sidenav__link">About</a></li>
-        <li><a href="#services" class="sidenav__link">Services</a></li>
-        <li><a href="#clients" class="sidenav__link">Clients</a></li>
-        <li><a href="#contact" class="sidenav__link"><img class=" menu__icon" height="70px" fill="#fff"
-                    src="../images/instagram.svg" alt="dots icon">t</a></li>
+        <li class="sidenav__item">
+            <a href="#about" class="sidenav__link">
+                <svg class="sidenav__icons" width="30" height="30">
+                    <use href="../images/icons.svg#icon-facebook"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="sidenav__item">
+            <a href="#services" class="sidenav__link">
+                <svg class="sidenav__icons" width="30" height="30">
+                    <use href="../images/icons.svg#icon-instagram"></use>
+                </svg>
+            </a>
+        </li>
+        <li class="sidenav__item">
+            <a href="#clients" class="sidenav__link">
+                <svg class="sidenav__icons" width="30" height="30">
+                    <use href="../images/icons.svg#icon-whatsapp"></use>
+                </svg>
+            </a>
+        </li>
     </ul>
-
-
-
-
 </div>
