--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,15 @@
         @@include('html/pages/servicesSection.html', {})
       </section>
 
+      <section class="whyChooseUs_block">
+        @@include('html/pages/whyChooseUs.html', {})
+      </section>
+
       <section class="aboutUs_block">
         @@include('html/pages/aboutUs.html', {})
       </section>
-
-      <section class="whyChooseUs_block">
-        @@include('html/pages/whyChooseUs.html', {})
+      <section class="sendRequest_block">
+        @@include('html/pages/sendRequest.html', {})
       </section>
 
     </main>
