--- a/src/html/pages/mainSection.html
+++ b/src/html/pages/mainSection.html
@@ -1,10 +1,10 @@
-<section class="main-section section">
+<section class="main-section section vanta" id="vanta">
     <div class="main-section__container container">
-        <h1 class="main-section__title">We create effective websites</h1>
-
-        <div>
-            <a href="#" class="btn"><span class="btn_text">Send request</span></a>
-        </div>
+        <h1 class="main-section__title">Welcome to the site<br /> First Step Web</h1>
+        <ul class="main-section__list">
+            <li class="main-section__text">We develop and implement your website</li>
+            <li><a href="#" class="btn"><span class="btn_text">Send request</span></a></li>
+        </ul>
 
     </div>
 </section>
