--- a/src/html/pages/whyChooseUs.html
+++ b/src/html/pages/whyChooseUs.html
@@ -1,53 +1,70 @@
 <ul class="list whyChooseUs-card">
     <li class="whyChooseUs-card__item">
-
-        <h2 class="whyChooseUs-card__title">Transparent Working Conditions</h2>
+        <h2 class="whyChooseUs-card__title">
+            <span class="whyChooseUs-card__number"> 001 </span> Transparent Working Conditions
+        </h2>
         <p class="whyChooseUs-card__desc">We provide a contract with guarantees and obligations.</p>
     </li>
     <li class="whyChooseUs-card__item">
 
-        <h2 class="whyChooseUs-card__title">Flexible Payment System</h2>
+        <h2 class="whyChooseUs-card__title">
+            <span class="whyChooseUs-card__number"> 002 </span>Flexible Payment System
+        </h2>
         <p class="whyChooseUs-card__desc">70/30, 60/40, 50/50 per stage.</p>
     </li>
     <li class="whyChooseUs-card__item">
 
-        <h3 class="whyChooseUs-card__title">Ongoing Feedback</h3>
+        <h3 class="whyChooseUs-card__title">
+            <span class="whyChooseUs-card__number"> 003 </span>Ongoing Feedback
+        </h3>
         <p class="whyChooseUs-card__desc">Stay connected via communication channels that are comfortable for you.</p>
 
     </li>
     <li class="whyChooseUs-card__item">
 
-        <h3 class="whyChooseUs-card__title">Work Stage Reports</h3>
+        <h3 class="whyChooseUs-card__title">
+            <span class="whyChooseUs-card__number"> 004 </span>Work Stage Reports
+        </h3>
         <p class="whyChooseUs-card__desc">Track results in real time.</p>
 
     </li>
     <li class="whyChooseUs-card__item">
 
-        <h2 class="whyChooseUs-card__title">Website training, Tech Support</h2>
+        <h2 class="whyChooseUs-card__title">
+            <span class="whyChooseUs-card__number">005 </span>Website training, Tech Support
+        </h2>
         <p class="whyChooseUs-card__desc">Consulting & recommendations after launching.</p>
 
     </li>
     <li class="whyChooseUs-card__item">
 
-        <h2 class="whyChooseUs-card__title">Demo Version of a Website Admin Panel</h2>
+        <h2 class="whyChooseUs-card__title">
+            <span class="whyChooseUs-card__number"> 006 </span>Demo Version of a Website Admin Panel
+        </h2>
         <p class="whyChooseUs-card__desc">We give test access to explore site management.</p>
 
     </li>
     <li class="whyChooseUs-card__item">
 
-        <h2 class="whyChooseUs-card__title">Ultimate Involvement in Your Business</h2>
+        <h2 class="whyChooseUs-card__title">
+            <span class="whyChooseUs-card__number"> 007 </span>Ultimate Involvement in Your Business
+        </h2>
         <p class="whyChooseUs-card__desc">We involve in business processes and build conversion-centered design.</p>
 
     </li>
     <li class="whyChooseUs-card__item">
 
-        <h2 class="whyChooseUs-card__title">Custom Design & Web Development</h2>
+        <h2 class="whyChooseUs-card__title">
+            <span class="whyChooseUs-card__number"> 008 </span>Custom Design & Web Development
+        </h2>
         <p class="whyChooseUs-card__desc">Clean and optimized code, responsive design for your target audience.</p>
 
     </li>
     <li class="whyChooseUs-card__item">
 
-        <h2 class="whyChooseUs-card__title">SEO-friendly code.</h2>
+        <h2 class="whyChooseUs-card__title">
+            <span class="whyChooseUs-card__number"> 009 </span>SEO-friendly code.
+        </h2>
         <p class="whyChooseUs-card__desc">Our websites are optimized for search engines and comply with the latest
             Google requirements.</p>
 
