--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -3,9 +3,11 @@
     <div class="footer__tablet">
       <div class="company-address">
         <a href="#" class="footer__link link">
-          <img class="footer__icon" height="70px" src="../images/logoblack.png" alt="dots icon">
+          <img class="footer__icon" height="70px" src="../images/logow.png" alt="dots icon">
         </a>
-        <address class="address">
+        <p class="footer__text">We are more than a digital agency</p>
+        <div class="footer__line"></div>
+        <!-- <address class="address">
           <ul class="list address-list">
             <li class="address-list__item">
               <h2 class="address__title">Phone number:</h2>
@@ -20,83 +22,49 @@
             </li>
 
           </ul>
-        </address>
+        </address> -->
       </div>
+
       <div class="services">
-        <h2 class="services__title">SERVICES</h2>
+        <h2 class="services__title">CONTACT US</h2>
+        <ul class="services__list list">
+          <li class="services__item">
+            <a href="tel:+15197743398" class="services__link ">+1 (519) 774-3398</a>
+          </li>
+          <li class="services__item">
+            <a href="firststepweb.ca@gmail.com" class="services__link ">firststepweb.ca@gmail.com</a>
+          </li>
+          <li class="services__item">
+            <p>Monday to Saturday</p>
+          </li>
+
+        </ul>
+      </div>
+
+
+      <div class="services">
+        <h2 class="services__title">ABOUT US</h2>
         <ul class="services__list list">
           <li class="services__item">
             <a class="services__link link" href="">
-              Landing page
+              Services
             </a>
           </li>
           <li class="services__item">
             <a class="services__link link" href="">
-              Corporate WebSites
+              Portfolio
             </a>
           </li>
           <li class="services__item">
             <a class="services__link link" href="">
-              Business WebSite
-            </a>
-          </li>
-          <li class="services__item">
-            <a class="services__link link" href="">
-              Business Card Website
-            </a>
-          </li>
-          <li class="services__item">
-            <a class="services__link link" href="">
-              Website redesign
-            </a>
-          </li>
-          <li class="services__item">
-            <a class="services__link link" href="">
-              Technical support
+              Why choose us.
             </a>
           </li>
         </ul>
       </div>
     </div>
-
-    <div class="services">
-      <h2 class="services__title">INFORMATION</h2>
-      <ul class="services__list list">
-        <li class="services__item">
-          <a class="services__link link" href="">
-            About us
-          </a>
-        </li>
-        <li class="services__item">
-          <a class="services__link link" href="">
-            Services
-          </a>
-        </li>
-        <li class="services__item">
-          <a class="services__link link" href="">
-            Portfolio
-          </a>
-        </li>
-
-      </ul>
-    </div>
-
-    <div class="services">
-      <h2 class="services__title">SOCIAL NETWORKS</h2>
-      <ul class="services__list list">
-        <li class="services__item">
-          <a class="services__link link" href="">
-            Facebook
-          </a>
-        </li>
-        <li class="services__item">
-          <a class="services__link link" href="">
-            Instagram
-          </a>
-        </li>
-
-      </ul>
-    </div>
+    </ul>
+  </div>
   </div>
 
 
