--- a/src/html/pages/whyChooseUs.html
+++ b/src/html/pages/whyChooseUs.html
@@ -1,3 +1,4 @@
+<h2 class="whyChooseUsTitle">Why choose us?</h2>
 <ul class="list whyChooseUs-card">
     <li class="whyChooseUs-card__item">
         <h2 class="whyChooseUs-card__title">
