--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -57,7 +57,7 @@
           </li>
           <li class="services__item">
             <a class="services__link link" href="">
-              Why choose us.
+              Why choose us
             </a>
           </li>
         </ul>
