--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,15 +1,49 @@
 <header class="header">
   <div class="header__container container">
-    <a href="#" class="logo"><img class=" menu__icon" height="70px" src="../images/logow.png" alt="dots icon"></a>
+    <div class="burger-menu">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+    <a href="#" class="logo"><img class="menu__icon" height="70px" src="../images/logow.png" alt="dots icon"></a>
     <nav class="header__menu menu">
       <ul class="menu__list">
-        <li class="menu__item"><a href="#" class="menu__link">Development</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Services</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Portfolio</a></li>
         <li class="menu__item"><a href="#" class="menu__link">About us</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Contact Us</a></li>
+
+        <!-- <li class="navigation">
+          <div id="menuToggle">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+              <a href="#">
+                <li>Home</li>
+              </a>
+              <a href="#">
+                <li>About</li>
+              </a>
+              <a href="#">
+                <li>Info</li>
+              </a>
+              <a href="#">
+                <li>Contact</li>
+              </a>
+              <a href="https://erikterwan.com/" target="_blank">
+                <li>Show me more</li>
+              </a>
+            </ul>
+          </div>
+        </li> -->
+
+
+
+
       </ul>
     </nav>
-    <!-- @@include('./iconMenu.html', {}) -->
   </div>
+
 </header>
