--- a/src/landing.html
+++ b/src/landing.html
@@ -7,7 +7,9 @@
         @@include('html/header.html', {})
         <main class="page">
 
-            
+            <section class="main_block">
+                @@include('html/servicePages/landingPage/landingPage.html', {})
+            </section>
 
         </main>
         @@include('html/footer.html', {})
