--- a/src/html/mainSections/sendRequest.html
+++ b/src/html/mainSections/sendRequest.html
@@ -9,22 +9,21 @@
                 <div class="contact-form-wrapper margin-18-right">
                     <form class="form">
                         <div class="form-group">
-                            <input required type="text" class="form-control" id="name" name="name"
-                                placeholder="Your name" tabindex="1" aria-label="Your Name">
+                            <input required type="text" class="form-control" id="name" name="name" placeholder="Name"
+                                tabindex="1" aria-label="Name">
                         </div>
                         <div class="form-group">
                             <input required type="email" class="form-control" id="email" name="email"
-                                placeholder="Your Email" tabindex="2" aria-label="Your Email">
+                                placeholder="Email" tabindex="2" aria-label="Email">
                         </div>
                         <div class="form-group">
-                            <input type="tel" id="phone" class="form-control" name="phone"
-                                placeholder="Your phone number" tabindex="3" aria-label="Your phone number"
-                                oninput="formatPhoneNumber(this)" maxlength="12">
+                            <input type="tel" id="phone" class="form-control" name="phone" placeholder="Phone number"
+                                tabindex="3" aria-label="Phone number" oninput="formatPhoneNumber(this)" maxlength="12">
                         </div>
 
                         <div class="form-group">
                             <textarea required rows="6" cols="60" name="message" class="form-control" id="message"
-                                placeholder="Your message" tabindex="4" aria-label="Message"></textarea>
+                                placeholder="Message" tabindex="4" aria-label="Message"></textarea>
                         </div>
                         <div class="margin-36-top">
                             <button type="submit" name="submit" class="btn">Send Message</button>
