--- a/src/portfoliowebsite.html
+++ b/src/portfoliowebsite.html
@@ -7,6 +7,13 @@
         @@include('html/header.html', {})
         <main class="page">
 
+            <section class="main_block">
+                @@include('html/servicePages/partfolioPage.html', {})
+            </section>
+            <section class="sendRequest_block">
+                @@include('html/mainSections/sendRequest.html', {})
+            </section>
+
         </main>
         @@include('html/footer.html', {})
     </div>
