--- a/src/catalog.html
+++ b/src/catalog.html
@@ -8,12 +8,11 @@
         <main class="page">
 
             <section class="main_block">
-                @@include('html/servicePages/landingPage.html', {})
+                @@include('html/servicePages/catalogPage.html', {})
             </section>
             <section class="sendRequest_block">
                 @@include('html/mainSections/sendRequest.html', {})
             </section>
-
 
         </main>
         @@include('html/footer.html', {})
@@ -25,5 +24,5 @@
 </html>
 
 @@include('html/head.html', {
-'title': 'Landing page'
+'title': 'Portfolio website'
 })
