--- a/src/html/header.html
+++ b/src/html/header.html
@@ -5,7 +5,11 @@
       <div class="bar"></div>
       <div class="bar"></div>
     </div>
-    <a href="#" class="logo"><img class="menu__icon" height="70px" src="../images/logow.png" alt="dots icon"></a>
+    <a href="index.html" class="logo">
+      <svg class="menu__icon" height="70">
+        <use href="../images/icons.svg#icon-logo"></use>
+      </svg>
+    </a>
     <nav class="header__menu menu">
       <ul class="menu__list">
         <li class="menu__item"><a href="#" class="menu__link">Services</a></li>
