--- a/src/html/mainSections/servicesSection.html
+++ b/src/html/mainSections/servicesSection.html
@@ -9,7 +9,7 @@
             <p class="services-card__desc">This is a one page site.
                 This type of site - order when you need to quickly and cheaply start a business</p>
             <div class="services-card__block">
-                <a href="landing.html" class="services-btn"><span class="services-text">To learn
+                <a href="landing.html" class="services-btn padding-20"><span class="services-text">To learn
                         more</span></a>
             </div>
         </li>
@@ -22,7 +22,7 @@
             <p class="services-card__desc">This is a 5-10 page website showcasing your offerings, company information,
                 terms of collaboration, and much more!</p>
             <div class="services-card__block">
-                <a href="portfoliowebsite.html" class="services-btn"><span class="services-text">To learn
+                <a href="portfoliowebsite.html" class="services-btn padding-20"><span class="services-text">To learn
                         more</span></a>
             </div>
         </li>
@@ -34,7 +34,7 @@
                 functions, presenting all the offered products in a
                 list.</p>
             <div class="services-card__block">
-                <a href="#" class="services-btn"><span class="services-text">To learn
+                <a href="#" class="services-btn padding-20"><span class="services-text">To learn
                         more</span></a>
             </div>
         </li>
@@ -49,7 +49,7 @@
                 activities are aimed at implementing various
                 ideas and marketing strategies, promoting products.</p>
             <div class="services-card__block">
-                <a href="#" class="services-btn"><span class="services-text">To learn
+                <a href="#" class="services-btn padding-20"><span class="services-text">To learn
                         more</span></a>
             </div>
         </li>
@@ -61,7 +61,7 @@
                 details. In the case of a store, the main
                 goal is to satisfy the customer.</p>
             <div class="services-card__block">
-                <a href="#" class="services-btn"><span class="services-text">To learn
+                <a href="#" class="services-btn padding-20"><span class="services-text">To learn
                         more</span></a>
             </div>
         </li>
@@ -73,7 +73,7 @@
                 reliable functioning of the webpage and the
                 proper operation of all its systems.</p>
             <div class="services-card__block">
-                <a href="#" class="services-btn"><span class="services-text">To learn
+                <a href="#" class="services-btn padding-20"><span class="services-text">To learn
                         more</span></a>
             </div>
         </li>
