--- a/src/html/mainSections/mainSection.html
+++ b/src/html/mainSections/mainSection.html
@@ -1,6 +1,6 @@
 <section class="vanta" id="vanta">
     <div class="container">
-        <h1 class="main-section__title">First Step Web</h1>
+        <!-- <h1 class="main-section__title">First Step Web</h1> -->
         <div class="main-section section">
             <div class="main-section__container">
                 <ul class="main-section__list">
