--- a/src/html/mainSections/whyChooseUs.html
+++ b/src/html/mainSections/whyChooseUs.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2 class="whyChooseUsTitle">Why choose us?</h2>
+    <h2 class=" main__title">Why choose us?</h2>
     <ul class="list whyChooseUs-card">
         <li class="whyChooseUs-card__item">
             <h2 class="whyChooseUs-card__title">
