--- a/src/html/servicePages/landingPage.html
+++ b/src/html/servicePages/landingPage.html
@@ -6,7 +6,7 @@
 
 <ul class="landingpage-section__list">
     <li class="landingpage-section__item">
-        <a href="landing.html" class="landingpage-section__btn">Landing page</a>
+        <a class="landing-Page-section-active-btn">Landing page</a>
     </li>
     <li class="landingpage-section__item">
         <a href="portfoliowebsite.html" class="landingpage-section__btn">Portfolio Website</a>
