--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     @@include('html/header.html', {})
     <main class="page">
       <!-- <section>
-        @@include('html/sidebar.html', {})
-      </section> -->
+          @@include('html/sidebar.html', {})
+        </section> -->
 
       <section class="main_block">
         @@include('html/mainSections/mainSection.html', {})
@@ -24,6 +24,10 @@
 
       <section class="aboutUs_block">
         @@include('html/mainSections/aboutUs.html', {})
+      </section>
+
+      <section class="workflow">
+        @@include('html/mainSections/workflow.html', {})
       </section>
 
 
