--- a/src/html/header.html
+++ b/src/html/header.html
@@ -12,8 +12,8 @@
     </a>
     <nav class="header__menu menu">
       <ul class="menu__list">
-        <li class="menu__item"><a href="#" class="menu__link">Services</a></li>
-        <li class="menu__item"><a href="#" class="menu__link">Portfolio</a></li>
+        <li class="menu__item"><a href="service.html" class="menu__link">Services</a></li>
+        <!-- <li class="menu__item"><a href="#" class="menu__link">Portfolio</a></li> -->
         <li class="menu__item"><a href="#" class="menu__link">About us</a></li>
         <li class="menu__item"><a href="#" class="menu__link">Contact Us</a></li>
 
