--- a/src/html/mainSections/servicesSection.html
+++ b/src/html/mainSections/servicesSection.html
@@ -1,5 +1,5 @@
 <div class="container margin-100-top">
-    <!-- <h2 class="services-title">Services</h2> -->
+    <h2 class="main__title">Services</h2>
     <ul class="list services-card">
         <li class="services-card__item">
 
@@ -34,7 +34,7 @@
                 functions, presenting all the offered products in a
                 list.</p>
             <div class="services-card__block">
-                <a href="#" class="services-btn padding-20"><span class="services-text">To learn
+                <a href="catalog.html" class="services-btn padding-20"><span class="services-text">To learn
                         more</span></a>
             </div>
         </li>
@@ -49,7 +49,7 @@
                 activities are aimed at implementing various
                 ideas and marketing strategies, promoting products.</p>
             <div class="services-card__block">
-                <a href="#" class="services-btn padding-20"><span class="services-text">To learn
+                <a href="corporateWebsite.html" class="services-btn padding-20"><span class="services-text">To learn
                         more</span></a>
             </div>
         </li>
@@ -61,7 +61,7 @@
                 details. In the case of a store, the main
                 goal is to satisfy the customer.</p>
             <div class="services-card__block">
-                <a href="#" class="services-btn padding-20"><span class="services-text">To learn
+                <a href="onlineStore.html" class="services-btn padding-20"><span class="services-text">To learn
                         more</span></a>
             </div>
         </li>
@@ -73,7 +73,7 @@
                 reliable functioning of the webpage and the
                 proper operation of all its systems.</p>
             <div class="services-card__block">
-                <a href="#" class="services-btn padding-20"><span class="services-text">To learn
+                <a href="support.html" class="services-btn padding-20"><span class="services-text">To learn
                         more</span></a>
             </div>
         </li>
