--- a/src/html/servicePages/corporateWebsitePage.html
+++ b/src/html/servicePages/corporateWebsitePage.html
@@ -1,5 +1,5 @@
 <div class="services-section">
-    <h1 class="services-section__title">LANDING PAGE</h1>
+    <h1 class="services-section__title">CORPORATE WEBSITE</h1>
     <p class="services-section__text">Price from 1000$</p>
     <button class="services-btn services-section__btn padding-10">Order service</button>
 </div>
@@ -15,7 +15,7 @@
         <a href="catalog.html" class="landingpage-section__btn">Catalog</a>
     </li>
     <li class="landingpage-section__item">
-        <a href="corporateWebsite.html" class="landingpage-section__btn">Corporate website</a>
+        <a class="landing-Page-section-active-btn">Corporate website</a>
     </li>
     <li class="landingpage-section__item">
         <a href="onlineStore.html" class="landingpage-section__btn">Online store</a>
