--- a/src/html/servicePages/supportPage.html
+++ b/src/html/servicePages/supportPage.html
@@ -1,5 +1,5 @@
 <div class="services-section">
-    <h1 class="services-section__title">LANDING PAGE</h1>
+    <h1 class="services-section__title">WEBSITE TECHNICAL SUPPORT</h1>
     <p class="services-section__text">Price from 1000$</p>
     <button class="services-btn services-section__btn padding-10">Order service</button>
 </div>
@@ -21,7 +21,7 @@
         <a href="onlineStore.html" class="landingpage-section__btn">Online store</a>
     </li>
     <li class="landingpage-section__item">
-        <a href="support.html" class="landingpage-section__btn">Website Technical Support</a>
+        <a class="landing-Page-section-active-btn">Website Technical Support</a>
     </li>
 </ul>
 
