chore: fix images task

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
 
 				<div class="page__container">
 	                <h1>Home Page</h1>
+					<div class="image-wrapper">
+						<img src="./images/test.jpg" alt="">
+					</div>
 					<div class="checkboxes">
 						@@include('html/checkboxes-example.html')
 					</div>
