--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,5 +1,43 @@
 <footer class="footer">
-  <div class="footer__container">
-    
-  </div>
+    <div class="footer__container">
+        <div class="footer__brand">
+            <a href="/" class="footer__logo">
+                <img src="/images/logo.svg" alt="GiftBox Logo" />
+                <span class="footer__name">GiftBox</span>
+            </a>
+            <p class="footer__about">
+                Thoughtful gifts for every occasion. Curated & custom boxes delivered with care.
+            </p>
+        </div>
+        <nav class="footer__nav" aria-label="Footer navigation">
+            <ul>
+                <li><a href="/html/pages/home.html">Home</a></li>
+                <li><a href="/html/pages/catalog.html">Catalog</a></li>
+                <li><a href="/html/pages/about.html">About</a></li>
+                <li><a href="/html/pages/contact.html">Contact</a></li>
+                <li><a href="/html/pages/faq.html">FAQ</a></li>
+            </ul>
+        </nav>
+        <div class="footer__social">
+            <a href="#" aria-label="Instagram" class="footer__icon">
+                <!-- Placeholder SVG -->
+                <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2">
+                    <circle cx="12" cy="12" r="8"/>
+                </svg>
+            </a>
+            <a href="#" aria-label="Facebook" class="footer__icon">
+                <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="6" y="6" width="12" height="12"/>
+                </svg>
+            </a>
+            <a href="#" aria-label="Twitter" class="footer__icon">
+                <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M8 19c8 0 12-7 12-12v-1"/>
+                </svg>
+            </a>
+        </div>
+    </div>
+    <div class="footer__copyright">
+        &copy; 2025 GiftBox. All rights reserved.
+    </div>
 </footer>
